# rag_writing_assistant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  project_plan.md
.claude/commands/: compliance_ci_agent.md  project_instructions.md  rag_governance_architect.md  test_guardian.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  export.py  generation.py  health.py
backend/app/core/: __init__.py  exceptions.py  logging.py
backend/app/models/: __init__.py  chat.py  common.py  document.py  generation.py
backend/app/rag/: __init__.py  chunking.py  embedding.py  prompts.py  vectorstore.py
backend/app/scripts/: __init__.py  migrate_embeddings.py
backend/app/services/: __init__.py  chat.py  confidence.py  conversation_store.py  diverse_retrieval.py  generation.py  ingestion.py  intent.py  reranker.py  retrieval.py  validation.py
backend/data/: .gitignore
backend/tests/: conftest.py  test_api_documents.py  test_api_generation.py  test_chat.py  test_chunking.py  test_diverse_retrieval.py  test_generation.py  test_ingestion.py  test_intent.py  test_models.py  test_retrieval.py  test_validation.py  test_vectorstore.py
docs/: .gitkeep
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/hooks/: index.ts  useChat.ts  (+4 more)
(+52 files in other folders)
